fix: update the resume

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <div class="first-project col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
-                                    <img src="assets/img/flexwhere.webp" alt="Microsoft BVS">
+                                    <img class="img" src="assets/img/toscano-750.jpg" alt="FlexWhere">
                                     <figcaption>Dutchview<br>FlexWhere</figcaption>
                                 </figure>
                                 <a href="https://flexwhere.nl" class="link" target="_blank"></a>
@@ -227,35 +227,27 @@
                         <div class="row">
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
-                                    <em>view project</em>
                                     <img src="assets/img/oleomec-750.jpg" alt="Microsoft BVS">
                                     <figcaption>Microsoft<br>BVS</figcaption>
                                 </figure>
-                                <a no-href="" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="3">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
-                                    <em>view project</em>
                                     <img src="assets/img/look-750.jpg" alt="Cloud Central Integration">
                                     <figcaption>Cognizant<br>Integration Hub</figcaption>
                                 </figure>
-                                <a no-href="" class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="3">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
-                                    <em class="line">view project</em>
                                     <img src="assets/img/emmearredo-750.jpg" alt="Cloud Central Conversion">
                                     <figcaption>Cognizant<br>Conversion Hub</figcaption>
                                 </figure>
-                                <a no-href=""class="link"></a>
                             </div>
                             <div class="col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="2">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork" class="line">
-                                    <em>view project</em>
                                     <img src="assets/img/oleomec-750.jpg" alt="Interactive Detailers">
                                     <figcaption>Interactive<br>Detailers</figcaption>
                                 </figure>
-                                <a no-href="" class="link"></a>
                             </div>
                         </div>
                     </div>
