fix: update the designation

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Govardhan Srinivas | Software Development Engineer III</title>
+        <title>Govardhan Srinivas | Frontend Developer</title>
         
         <meta name="theme-color" content="#000">
-        <meta name="description" content="Govardhan Srinivas | Software Development Engineer III | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
+        <meta name="description" content="Govardhan Srinivas | Frontend Developer | Angular, React, Node, Java, MEAN Stack Developer based in Deventer, Netherlands.">
         <meta name="keywords" content="govardhan srinivas, portfolio, netherlands, angular, react, node, hire">
     
         <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
@@ -166,7 +166,7 @@
                             <div class="circle circle3 md moove moove-mobile" data-rellax-speed="3"></div>
                             <div class="circle circle4 lg moove moove-mobile" data-rellax-speed="-3"></div>
                             <div class="wrap-description">
-                                <p class="small-height">Software Development Engineer III<br>
+                                <p class="small-height">Frontend Developer<br>
                                     based in Deventer, Netherlands</p>
                             </div>
                             <div class="wrap-content">
