fix: update the designation

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <div class="row">
                             <div class="col-md-6 moove" data-rellax-speed="3">
                                 <h2>ab_<br/>out<span class="color">:</span></h2>
-                                <p data-animation="reveal">I'm a Software Development Engineer III based in Deventer, Netherlands, with over 8+ years of experience in IT Design and Development. I work at <a href="https://dutchview.com" target="_blank">Dutchview IT</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm an Open source contributor.</p>
+                                <p data-animation="reveal">I'm a Frontend developer based in Deventer, Netherlands, with over 8+ years of experience in IT Design and Development. I work at <a href="https://dutchview.com" target="_blank">Dutchview IT</a> developing real-time solutions with webapp, portals and micro services. I'm a dreamer and a fanatic of all digital things.<br>I love minimal design and pizza :). I'm an Open source contributor.</p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                             <div class="first-project col-md-offset-2 col-md-4 single-project moove" data-rellax-speed="4">
                                 <figure itemscope itemtype="http://schema.org/CreativeWork">
                                     <em class="line">view project</em>
-                                    <img class="img" src="assets/img/toscano-750.jpg" alt="FlexWhere">
+                                    <img class="img" src="assets/img/werkplek-reserveren.webp" alt="FlexWhere">
                                     <figcaption>Dutchview<br>FlexWhere</figcaption>
                                 </figure>
                                 <a href="https://flexwhere.nl" class="link" target="_blank"></a>
